--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -6174,6 +6174,10 @@ fieldset:disabled .btn {
     height: 50% !important
 }
 
+.h-50-px {
+    height: 50px !important
+}
+
 .h-75 {
     height: 75% !important
 }
