add class fs-4-5

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -7146,6 +7146,10 @@ fieldset:disabled .btn {
     font-size: 1.09375rem !important
 }
 
+.fs-4-5 {
+    font-size: 0.984375rem !important
+}
+
 .fs-5,
 .fs-6 {
     font-size: .875rem !important
