--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,3 +6,14 @@ ul a.submenu-link{
 {
     font-weight: bold;
 }
+
+.message-toast{
+    position: fixed; 
+    z-index: 9999999;
+    top: 12px; 
+    right: 12px;
+    box-shadow: none !important;
+}
+.message-toast .message-body{
+    padding: 3px 0px 3px 0px;
+}
