--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,10 +10,14 @@ ul a.submenu-link{
 .message-toast{
     position: fixed; 
     z-index: 9999999;
-    top: 2px; 
-    right: 2px;
+    top: 20px; 
+    right: 20px;
+    opacity: 80%;
     box-shadow: none !important;
 }
+.message-toast:hover{
+    opacity: 100%;
+}
 .message-toast .message-body{
-    padding: 3px 0px 3px 0px;
+    padding: 3px 0px 3px 10px;
 }
