fix screen description sheet

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -24,6 +24,8 @@ ul a.submenu-link{
 }
 
 #sheet_editor{
-    /* overflow: hidden; */
-    border-right: 1px solid #f5f6f7;
+    border: 1px solid #c1c4c7;
+    height: 80vh;
+    width: 100%;
+    background-color: #f5f6f7;
 }
