--- a/public/assets/treejs/css/style.css
+++ b/public/assets/treejs/css/style.css
@@ -383,9 +383,9 @@
   background: #e7f4f9;
 }
 .jstree-default .jstree-wholerow-clicked {
-  background: #beebff;
+  /* background: #beebff;
   background: -webkit-linear-gradient(top, #beebff 0%, #a8e4ff 100%);
-  background: linear-gradient(to bottom, #beebff 0%, #a8e4ff 100%);
+  background: linear-gradient(to bottom, #beebff 0%, #a8e4ff 100%); */
 }
 .jstree-default .jstree-node {
   min-height: 30px;
