update style parent item

--- a/public/assets/treephp/css/style.css
+++ b/public/assets/treephp/css/style.css
@@ -16,7 +16,7 @@
     font-weight: 900; 
     font-size: 20px;
     margin-left: 0;
-    content: "\f0d8";
+    content: "\f0d7";
     vertical-align: middle;
     display: inline-block;
 }
@@ -28,6 +28,6 @@
     font-size: 20px;
     display: inline-block;
     vertical-align: middle;
-    content: "\f0d7";
+    content: "\f0da";
     
 }
