--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,3 +43,24 @@ span.select2-container {
 {
     height: calc(100vh - 130px);
 }
+
+.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content{
+    height: 100vh;
+    overflow: auto;
+}
+
+.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(0,0,0,0.1);
+    border: 1px solid #ccc;
+}
+.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content::-webkit-scrollbar{
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+.sidebar-content.js-simplebar .simplebar-wrapper .simplebar-mask .simplebar-content-wrapper .simplebar-content::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background: linear-gradient(left, #fff, #e4e4e4);
+    border: 1px solid #aaa;
+}
