--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -94,3 +94,11 @@ span.select2-container {
 #version_link {
     border-top: 2px solid #dee2e6;
 }
+
+.relate-note-description{
+    overflow: hidden;
+    white-space: nowrap !important;
+    max-width: 500px;
+    text-overflow: ellipsis;
+    display: block;
+}
