--- a/public/assets/timeline/css/style.css
+++ b/public/assets/timeline/css/style.css
@@ -1,161 +1,84 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:100,400,700");
- body, html {
-	 font-family: "Roboto", sans-serif;
-	 background-color: #cddade;
-	 height: 100%;
-	 -webkit-font-smoothing: antialiased;
-	 -moz-osx-font-smoothing: grayscale;
+table.table-timeline {
+  margin: 0;
+  border: none;
+  border-collapse: separate;
+  border-spacing: 0;
+  table-layout: fixed;
+  border: 1px solid #ccc;
 }
- .header {
-	 color: #202125;
-	 margin-bottom: 40px;
+table.table-timeline td,
+table.table-timeline th {
+  border: 1px solid #ccc;
+  border-left: none;
+  border-bottom: none;
+  padding: 0.5rem 1rem;
 }
- .header h2 {
-	 font-weight: 600;
+table.table-timeline thead th {
+  padding: 5px 0;
+  position: sticky;
+  top: 0;
+  z-index: 1001;
+  background: #a9a9a9;
 }
- .header p {
-	 font-weight: 300;
-}
- .gantt-wrapper {
-	width: 100%;
-	margin: 0 auto;
-}
- .gantt {
-	 display: grid;
-	 border: 0;
-	 border-radius: 3px;
-	 position: relative;
-	 overflow: hidden;
-	 box-sizing: border-box;
-	 border: 1px solid #202125;
-}
- .gantt__row {
-	 display: grid;
-	 grid-template-columns: 300px 1fr;
-	 background-color: #fff;
-}
- .gantt__row:nth-child(odd) {
-	 background-color: #f5f5f5;
-}
- .gantt__row:nth-child(odd) .gantt__row-first {
-	 background-color: #f5f5f5;
-}
- .gantt__row:nth-child(3) .gantt__row-bars {
-	 border-top: 0;
-}
- .gantt__row:nth-child(3) .gantt__row-first {
-	 border-top: 0;
-}
- .gantt__row--empty {
-	 background-color: #ffd6d2 !important;
-	 z-index: 1;
-}
- .gantt__row--empty .gantt__row-first {
-	 border-width: 1px 1px 0 0;
-}
- .gantt__row--lines {
-	 position: absolute;
-	 height: 100%;
-	 width: 100%;
-	 background-color: transparent;
-	 grid-template-columns: 300px repeat(7, 1fr);
-}
- .gantt__row--lines span {
-	 display: block;
-	 border-right: 1px solid rgba(0, 0, 0, 0.1);
-}
- .gantt__row--lines span.marker {
-	 background-color: rgba(10, 52, 68, 0.13);
-	 z-index: 2;
-}
- .gantt__row--lines:after {
-	 grid-row: 1;
-	 grid-column: 0;
-	 background-color: #1688b3 45;
-	 z-index: 2;
-	 height: 100%;
-}
- .gantt__row--months {
-	 color: #fff;
-	 background-color: #222e3c !important;
-	 border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	 grid-template-columns: 300px repeat(7, 1fr);
-}
- .gantt__row--months .gantt__row-first {
-	 border-top: 0 !important;
-	 background-color: #222e3c !important;
-}
- .gantt__row--months span {
-	 text-align: center;
-	 font-size: 13px;
-	 align-self: center;
-	 font-weight: bold;
-	 padding: 20px 0;
-}
- .gantt__row-first {
-	 background-color: #fff;
-	 border-width: 1px 0 0 0;
-	 border-color: rgba(0, 0, 0, 0.1);
-	 border-style: solid;
-	 padding: 15px 0;
-	 font-size: 13px;
-	 font-weight: bold;
-	 text-align: center;
-}
- .gantt__row-bars {
-	 list-style: none;
-	 display: grid;
-	 padding: 9px 0;
-	 margin: 0;
-	 grid-template-columns: repeat(7, 1fr);
-	 grid-gap: 8px 0;
-	 border-top: 1px solid rgba(221, 221, 221, 0.8);
-}
- .gantt__row-bars li {
-	 font-weight: 500;
-	 text-align: left;
-	 font-size: 14px;
-	 min-height: 15px;
-	 height: 30px;
-	 background-color: #55de84;
-	 padding: 5px 12px;
-	 color: #fff;
-	 overflow: hidden;
-	 position: relative;
-	 cursor: pointer;
-	 border-radius: 20px;
-}
- .gantt__row-bars li.stripes {
-	 background-image: repeating-linear-gradient(45deg, transparent, transparent 5px, rgba(255, 255, 255, .1) 5px, rgba(255, 255, 255, .1) 12px);
-}
- .gantt__row-bars li:before, .gantt__row-bars li:after {
-	 content: "";
-	 height: 100%;
-	 top: 0;
-	 z-index: 4;
-	 position: absolute;
-	 background-color: rgba(0, 0, 0, 0.3);
-}
- .gantt__row-bars li:before {
-	 left: 0;
-}
- .gantt__row-bars li:after {
-	 right: 0;
+table.table-timeline td {
+  background: #fff;
+  padding: 4px 5px;
+  text-align: center;
 }
 
-.nav-previous-week{
-	left: 306px;
-	top: 20px;
+table.table-timeline thead th:first-child span{
+	width: 400px;
+	display: block;
+}
+table.table-timeline thead th span{
+	width: 150px;
+	text-align: center;
+	display: block;
+}
+table.table-timeline tbody th {
+  text-align: left;
+  position: relative;
+}
+table.table-timeline thead th:first-child {
+  position: sticky;
+  left: 0;
+  z-index: 1002;
+  padding: 0.5rem 1rem;
+}
+table.table-timeline tbody th {
+  position: sticky;
+  left: 0;
+  background: white;
+  z-index: 1001;
 }
 
-.nav-next-week{
-	right: 8px;
-	top: 20px;
-}
-.next-week, .previous-week{
-	color: #fff;
+.outline{
+  width: 100%;
+  max-height: calc(100vh - 118px);
+  overflow: auto;
 }
 
-.next-week:hover, .previous-week:hover{
-	color: #fff;
+.outline.preview{
+  max-height: calc(100vh - 82px);
+}
+.main.min-height-auto{
+	min-height: auto;
+}
+
+.table-timeline td.today, table.table-timeline thead th.today{
+	background-color: #f5f5f5;
+}
+.table-timeline .item-timeline{
+	background-color: #ff0015;
+	position: absolute;
+	z-index: 1000;
+	border-radius: 5px;
+	top: 25%;
+	left: 4px;
+	color: #ffffff;
+	font-weight: bold;
+}
+
+.table-timeline .item-timeline.item-done{
+	background-color: #03ac17;
 }
