--- a/public/assets/calendar/css/style.css
+++ b/public/assets/calendar/css/style.css
@@ -66,12 +66,18 @@ caption {
 	text-align: center;
 	margin-bottom: 5px;
 	padding: 4px;
+	margin-right: 5px;
 	color: #333;
 	width: 20px;
     font-weight: bold;
 	border-radius: 50%;
+	white-space: nowrap;
   flex: 0 0 auto;
   align-self: flex-end;
+}
+
+#calendar .day{
+	padding: 0;
 }
 
 #calendar .event {
