--- a/public/assets/calendar/css/style.css
+++ b/public/assets/calendar/css/style.css
@@ -83,11 +83,15 @@ caption {
 #calendar .event.start{
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
+	margin-left: 8px;
+	border-left: 1px solid #b5dbdc;
 }
 
 #calendar .event.end{
-	border-top-left-radius: 4px;
-	border-bottom-left-radius: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	margin-right: 8px;
+	border-right: 1px solid #b5dbdc;
 }
 
 #calendar .event {
@@ -99,6 +103,8 @@ caption {
 	line-height: 14px;
 	background: #e4f2f2;
 	border: 1px solid #b5dbdc;
+	border-left: 0;
+	border-right: 0;
 	color: #009aaf;
 	text-decoration: none;
 }
@@ -107,6 +113,7 @@ caption {
 	color: #666;
 	margin: 3px 0 7px 0;
 	text-decoration: none;	
+	min-height: 14px;
 }
 
 #calendar .other-month {
