update fix event button calendar

--- a/public/assets/calendar/css/style.css
+++ b/public/assets/calendar/css/style.css
@@ -121,6 +121,11 @@ caption {
 	color: #666;
 }
 
+#calendar .today {
+	background: #90daf1;
+	color: #666;
+}
+
 /* ============================
 				Mobile Responsiveness
    ============================*/
