--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -38,7 +38,7 @@ ul a.submenu-link{
 .select2-container {
     z-index: 9999;
 }
-div > .select2-container{
+div .select2-w-100 .select2-container{
     width: 100% !important;
 }
 span.select2-container {
@@ -101,4 +101,86 @@ span.select2-container {
     max-width: 500px;
     text-overflow: ellipsis;
     display: block;
+}
+
+.hide-modal span.select2-container{
+    z-index: 0;
+}
+
+#editPosition a.btn.btn-primary{
+    display: none;
+}
+
+.list-products .remove-product
+{
+    padding: 2px 7px;
+    top: 0;
+    right: 0;
+    font-size: 1rem;
+}
+
+.list-products .product-item .content, .feature-list .feature-item .feature-title, .feature-list .feature-item .feature-content{
+    text-align: center;
+}
+
+.list-products .product-item, .feature-list .feature-item .feature-title, .feature-list .feature-item .feature-content{
+    cursor: pointer;
+}
+
+.preview-note .list-products .product-item, .preview-note .feature-list .feature-item .feature-title, .preview-note .feature-list .feature-item .feature-content{
+    cursor: auto;
+}
+
+.feature-item .remove-feature
+{
+    padding: 2px 7px;
+    top: 0;
+    right: 0;
+    font-size: 1rem;
+}
+
+.feature-item .feature-title
+{
+    vertical-align: middle;
+}
+.feature-item .feature-title .content{
+    min-height: 21px;
+}
+
+.feature-item .feature-content p {
+    margin: 0;
+}
+
+.type-checkbox.checkbox-col-3 .form-check
+{
+    width: 33%;
+}
+
+.type-checkbox.checkbox-col-3 .option-group
+{
+    width: 33%;
+    margin-bottom: 10px;
+}
+
+.type-checkbox.checkbox-col-3 .option-group .form-check{
+    width: 100%;
+}
+
+.type-checkbox.checkbox-col-3 fieldset
+{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.widget-history{
+    max-height: 300px;
+    overflow: auto;
+}
+
+#filter_form .select2-container--default .select2-selection--multiple .select2-selection__choice{
+    margin-top: 3px;
+}
+
+#filter_form .select2-container--default .select2-selection--multiple{
+    padding-bottom: 3px;
 }
