fix issue note upload not work

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,6 +43,7 @@ div .select2-w-100 .select2-container{
 }
 span.select2-container {
     z-index:10050;
+    width: 100% !important;
 }
 .select2-no-index span.select2-container
 {
